Add additional modules for LCD support

--- a/platformio.ini
+++ b/platformio.ini
@@ -16,3 +16,5 @@ lib_deps =
 	fastled/FastLED@^3.10.3
 	robtillaart/RunningAverage@^0.4.8
 	olikraus/U8g2@^2.36.17
+	adafruit/Adafruit ST7735 and ST7789 Library@^1.10.4
+    adafruit/Adafruit GFX Library@^1.11.11
