Basic alphanumeric display implemented

--- a/platformio.ini
+++ b/platformio.ini
@@ -16,3 +16,4 @@ lib_deps =
 	fastled/FastLED@^3.10.3
 	robtillaart/RunningAverage@^0.4.8
 	olikraus/U8g2@^2.36.17
+	adafruit/Adafruit LED Backpack Library@^1.5.1
